Добавили конструктор формы

--- a/Risovalka/Risovalka.vcxproj
+++ b/Risovalka/Risovalka.vcxproj
@@ -82,6 +82,7 @@
     <Link>
       <AdditionalDependencies />
       <EntryPointSymbol>main</EntryPointSymbol>
+      <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -119,10 +120,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CppFiles\MyForm.cpp" />
+    <ClCompile Include="MyForm.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HeaderFiles\MyForm.h" />
+    <ClInclude Include="MyForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Media Include="..\ColorMain\Marimba\MarimbaA.wav" />
@@ -153,6 +156,11 @@
     <Media Include="..\ColorMain\WoodWind\WoodWindE.wav" />
     <Media Include="..\ColorMain\WoodWind\WoodWindF.wav" />
     <Media Include="..\ColorMain\WoodWind\WoodWindG.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MyForm.resx">
+      <DependentUpon>MyForm.h</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
