--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Risovalka/.vs/Risovalka/FileContentIndex/0dfd6225-a39d-4cf2-9c0a-e1c98742f7d2.vsidx
+/Risovalka/.vs/Risovalka/FileContentIndex
